--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@babel/plugin-transform-parameters": "^7.13.0",
     "@babel/plugin-transform-runtime": "^7.13.10",
     "@babel/preset-env": "^7.13.10",
+    "@vue/compiler-sfc": "^3.4.31",
     "ava": "^3.15.0",
     "babel-loader": "^8.2.2",
     "css-loader": "^3.6.0",
@@ -59,10 +60,9 @@
     "raw-loader": "^4.0.2",
     "request": "^2.88.2",
     "terser-webpack-plugin": "^5.1.1",
-    "vue-codemirror": "^4.0.6",
-    "vue-loader": "^15.9.6",
+    "vue-codemirror": "^6.1.1",
+    "vue-loader": "^17.4.2",
     "vue-style-loader": "^4.1.3",
-    "vue-template-compiler": "^2.6.12",
     "webpack": "^5.24.4",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2",
@@ -70,11 +70,14 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.13.10",
+    "@codemirror/lang-html": "^6.4.9",
+    "@codemirror/lang-javascript": "^6.2.2",
+    "@codemirror/theme-one-dark": "^6.1.2",
     "arrayslicer": "^1.2.3",
     "hammerjs": "^2.0.8",
     "hamsterjs": "^1.1.3",
     "lz-string": "^1.4.4",
     "moment": "^2.29.1",
-    "vue": "^2.6.12"
+    "vue": "^3.4.31"
   }
 }
